--- a/liquidwar6/doc/ldr-gdoc.texi
+++ b/liquidwar6/doc/ldr-gdoc.texi
@@ -38,6 +38,16 @@ be guessed from texture.
 @strong{Return value:}  none.
 @end deftypefun
 
+@deftypefun {int} {lw6ldr_cursor_texture_read} (lw6map_cursor_texture_t * @var{cursor_texture}, char * @var{dirname})
+@var{cursor_texture}:  the cursor texture (out param)
+
+@var{dirname}:  the directory we load the data form (map dir)
+
+Reads the cursor texture information, if not available, will use defaults
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
 @deftypefun {void} {lw6ldr_free_entry} (lw6ldr_entry_t * @var{entry})
 @var{entry}:  the entry to free
 
