added new cursors by Kasper Hviid

--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,5 +1,7 @@
 2011-07-25 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added custom cursors by Kasper Hviid.
+
 	* Added avoid-the-void by Kasper Hviid.
 
 2011-05-19 : Christian Mauduit <ufoot@ufoot.org>
