Implemented per-team profiles.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-26 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Implemented per-team profiles.
+
 2011-07-25 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added new cursors by Kasper Hviid.
