--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-28 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Released 0.0.10beta.
+
 2011-07-25 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added custom cursors by Kasper Hviid.
