--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-07-28 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Released 0.0.10beta.
+
 	* Fixed link error on Debian x86_64.
 
 2011-07-26 : Christian Mauduit <ufoot@ufoot.org>
