--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-29 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Released 0.0.10beta.
+
 2011-07-28 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed link error on Debian x86_64.
