--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -354,7 +354,7 @@ a build is done with a different source.
 @item
 2010-08-23 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.9beta/,0.0.9beta}, codename ``Chuck'', stamp 2096
 @item
-2011-07-28 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.10beta/,0.0.10beta}, codename ``Gengis Kahn'', stamp 2561
+2011-07-29 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.10beta/,0.0.10beta}, codename ``Gengis Kahn'', stamp 2561
 @end itemize
 
 @subsection Road map
@@ -725,7 +725,7 @@ from source, but use your favorite GNU/Linux distribution packages.
 
 On an RPM based GNU/Linux 
 system, a typical command
-(tested with @uref{http://www.fedoraproject.org/, Fedora} 11)
+(tested with @uref{http://www.fedoraproject.org/, Fedora})
 could be:
 
 @example
@@ -746,18 +746,18 @@ perl lcov global valgrind graphviz gv texinfo-tex
 @end example
 
 On a DEB package based GNU/Linux system this command
-(tested with @uref{http://www.debian.org/, Debian} lenny)
+(tested with @uref{http://www.debian.org/, Debian} 6.0 squeeze)
 would be:
 
 @example
 apt-get install \
 make gcc libc6 libc6-dev binutils \
 guile-1.8 guile-1.8-dev guile-1.8-libs libgmp3c2 libgmp3-dev \
-libtool libltdl3 libltdl3-dev \
+libtool libltdl7 libltdl7-dev \
 zlib1g zlib1g-dev libexpat1 libexpat1-dev \
 libpng12-0 libpng12-dev libjpeg62 libjpeg62-dev \
 libsqlite3-0 libsqlite3-dev \
-libncurses5 libncurses5-dev libreadline5 libreadline5-dev \
+libncurses5 libncurses5-dev libreadline6 libreadline6-dev \
 libgl1-mesa-glx libgl1-mesa-dri libgl1-mesa-dev libglu1-mesa libglu1-mesa-dev \
 libsdl1.2debian-alsa libsdl1.2-dev libsdl-image1.2 libsdl-image1.2-dev \
 libsdl-mixer1.2 libsdl-mixer1.2-dev \
