--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-30 : Christian Mauduit <ufoot@ufoot.org>
+
+	* 0.0.10beta -> 0.0.11beta.
+
 2011-07-29 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Released 0.0.10beta.
